Tests/Runtime2/Error/Multilingual/.build/catchkorean.pr
[
  {
    "name": "CatchKorean",
    "description": "Sets the %caughtKorean% variable to true (with a null-like PR value as provided).",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "set %caughtKorean% = true",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "variable",
            "action": "set",
            "parameters": [
              {
                "name": "Name",
                "value": "%caughtKorean%",
                "type": "string"
              },
              {
                "name": "Value",
                "value": true,
                "type": "bool"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/CatchKorean.goal",
    "prPath": "/.build/catchkorean.pr",
    "hash": "287ada7e401dad5112bfcbd604fa2f11d75a5f355c734fcd157d75eeb32937d2",
    "builderVersion": "0.3",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]